--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,15 +1,8 @@
-<h2>Reporter output</h2><table><tr><td>Open Chrome Browser in Remote System</td></tr>
-<tr><td>Enter the URL</td></tr>
+<h2>Reporter output</h2><table><tr><td>Open Chrome Browser in Local System</td></tr>
+<tr><td>Enter the URL:https://pos.aksharatraining.in/pos/public/</td></tr>
 <tr><td>Maximize the Browser</td></tr>
 <tr><td>Set ITO</td></tr>
 <tr><td>Set ETO</td></tr>
-<tr><td>Google</td></tr>
-<tr><td>Close the Browser</td></tr>
-<tr><td>Open Chrome Browser in Remote System</td></tr>
-<tr><td>Enter the URL</td></tr>
-<tr><td>Maximize the Browser</td></tr>
-<tr><td>Set ITO</td></tr>
-<tr><td>Set ETO</td></tr>
-<tr><td>Google</td></tr>
+<tr><td>Home Page is Displayed</td></tr>
 <tr><td>Close the Browser</td></tr>
 </table>
