modified script invalidlogin

--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -3,6 +3,13 @@
 <tr><td>Maximize the Browser</td></tr>
 <tr><td>Set ITO</td></tr>
 <tr><td>Set ETO</td></tr>
+<tr><td>Error Msg is Displayed</td></tr>
+<tr><td>Close the Browser</td></tr>
+<tr><td>Open Chrome Browser in Local System</td></tr>
+<tr><td>Enter the URL:https://pos.aksharatraining.in/pos/public/</td></tr>
+<tr><td>Maximize the Browser</td></tr>
+<tr><td>Set ITO</td></tr>
+<tr><td>Set ETO</td></tr>
 <tr><td>Home Page is Displayed</td></tr>
 <tr><td>Close the Browser</td></tr>
 </table>
