--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f9896d">  <td>25/02/11 08:07:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.postCondition()[pri:0, instance:script.Test3@72967906]">&lt;&lt;postCondition</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a66a6a">  <td>25/02/11 08:07:43</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.testB()[pri:0, instance:script.Test3@72967906]">testB</td> 
+<tr bgcolor="f9896d">  <td>25/02/12 08:42:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.postCondition()[pri:0, instance:script.InvalidLogin@72967906]">&lt;&lt;postCondition</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="f9896d">  <td>25/02/12 08:42:04</td>   <td>-4021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preCondition(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:script.InvalidLogin@72967906]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="a66a6a">  <td>25/02/12 08:42:07</td>   <td>-953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.testInvalidLogin()[pri:2, instance:script.InvalidLogin@72967906]">testInvalidLogin</td> 
   <td>main@1554547125</td>   <td></td> </tr>
 </table>
