--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,679</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,945</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">script.InvalidLogin</td><td><a href="#m0">testInvalidLogin</a></td><td rowspan="1">1739329927430</td><td rowspan="1">949</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">script.InvalidLogin</td><td><a href="#m0">testInvalidLogin</a></td><td rowspan="1">1739380744329</td><td rowspan="1">1397</td></tr><tr class="passedodd"><td rowspan="1">script.ValidLogin</td><td><a href="#m1">testValidLogin</a></td><td rowspan="1">1739380747937</td><td rowspan="1">1582</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">script.InvalidLogin#testInvalidLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Error Msg is Displayed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">script.InvalidLogin#testInvalidLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Error Msg is Displayed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">script.ValidLogin#testValidLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Home Page is Displayed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
